@@ -114,3 +114,4 @@ Current
 	- Modules: added memoserv/main
 	- Modules: added chanserv/set
 	- Modules: Added to nickset/set: set noexpire
+	- API: added account_name to get an account name via a grouped nick
